--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,17 @@
-html {
-  height: 100%;
+:root {
+  --color-main: #7f5dff;
+  --color-main-hover: #9d82ff;
+  --color-main-hover-bg: #c8bcf7;
+  --color-text-hover: #52428d;
 }
 
-body {
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+
+  padding: 0;
   margin: 0;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
