--- a/src/pages/CoursePage/CoursePage.module.css
+++ b/src/pages/CoursePage/CoursePage.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: linear-gradient(135deg, #e3f0ff 0%, #ffffff 60%, #a7cfff 100%);
+    /*background: linear-gradient(135deg, #e3f0ff 0%, #ffffff 60%, #a7cfff 100%);*/
     padding-bottom: 48px;
 }
 
