--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@
 }
 
 html, body {
-  max-width: 100%;
+  width: 100vw;
+  min-height: 100vh;
   overflow-x: hidden;
 
   padding: 0;
@@ -14,4 +15,6 @@ html, body {
 
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+  background-color: var(--color-main);
 }
